--- a/src/components/ColorPicker/ColorPicker.module.css
+++ b/src/components/ColorPicker/ColorPicker.module.css
@@ -4,6 +4,7 @@
   height: 100vh;
   transition: background-color 0.5s linear;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 .title {
   text-align: center;
