--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-/* :root {
-  font-family: Inter, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-} */
-
 .profile {
   border: 1px solid #ccc;
   padding: 16px;
@@ -36,4 +28,27 @@ ul {
 
 li {
   margin-bottom: 4px;
+}
+
+.flex {
+  justify-content: center;
+  display: flex;
+  gap: 20px;
+}
+
+.btn {
+  color: black;
+  padding: 10px 22px;
+  border-radius: 4px;
+  border: none;
+  background-color: white;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  font-size: 2.5rem;
+  border: 1px solid black;
+
+  &:hover {
+    background-color: #091ec2;
+    color: white;
+  }
 }
